--- a/index.html
+++ b/index.html
@@ -8,18 +8,58 @@
 <body>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
-  <div id="app">{{ message }}</div>
-
+  <div id="app">
+    <h2>HTML Color Names</h2>
+    <div>
+        <input type="text" v-model="keywd" placeholder="Keyword"> 
+    </div>
+    <div class="list">
+        <div v-for="color in filteredColors" class="color-tag" :style="autoColor(color)">{{color.hex}} {{color.name}}</div>
+    </div>
+  </div>
   <script>
-    const { createApp } = Vue
-
-    createApp({
-      data() {
-        return {
-          message: 'Hello Vue!'
+    var debounceDirective = {
+        beforeMount(el, binding) {
+            let hnd;
+            el.addEventListener('input', () => {
+                clearTimeout(hnd);
+                hnd = setTimeout(() => el.dispatchEvent(new Event('change')), binding.value || 500);
+            });
         }
-      }
-    }).mount('#app')
+    };
+  </script>
+  <script>
+      const app = Vue.createApp({
+          data() {
+              return {
+                  colors: colors,
+                  keywd: ''
+              }
+          },
+          methods: {
+              autoColor(color) {
+                  const r = parseInt(color.hex.substring(1, 3), 16);
+                  const g = parseInt(color.hex.substring(3, 5), 16);
+                  const b = parseInt(color.hex.substring(5, 7), 16);
+                  const complementary = (r * 0.299 + g * 0.587 + b * 0.114) > 186 ? '#000000' : '#ffffff';
+                  return {
+                      'background-color': color.hex,
+                      'color': complementary
+                  }
+              }
+          },
+          computed: {
+              filteredColors() {
+                  const keywd = this.keywd.trim().toLowerCase();
+                  return this.colors.filter(color => {
+                      return color.name.toLowerCase().includes(keywd) ||
+                          color.hex.toLowerCase().includes(keywd);
+                  })
+              }
+          }
+      });
+      app.directive('debounce', debounceDirective);
+      app.mount('#app');
   </script>
 </body>
 </html>
